tests/inter/fail/illegal-035.dcf
void main(){
    // Constant fields require initializers
    const int i;

}